# RC-Plane

./: .gitignore  CMakeLists.txt
Flight-Controller/: .clang-format  CMakeLists.txt
Flight-Controller/components/mirf/: mirf.c  mirf.h
Flight-Controller/main/: CMakeLists.txt  EspHal.h  actuator_control.c  actuator_control.h  idf_component.yml  main.c  radio_link.cpp  radio_link.h  udp_logger.c  udp_logger.h
Remote-Controller/: .clang-format  CMakeLists.txt  partitions.csv
Remote-Controller/main/: CMakeLists.txt  idf_component.yml  joystick_calib.c  joystick_calib.h  main.c  remote_ota.c  remote_ota.h
main/: CMakeLists.txt  main.c  rc_protocol.h
shared_components/radio_link/: CMakeLists.txt  idf_component.yml  radio_link.cpp
shared_components/radio_link/include/: radio_link.h
shared_components/rc_protocol/include/: rc_protocol.h
