idf_component_register(
    SRCS 
        "main.c"
        "actuator_control.c"
        "udp_logger.c"
        "radio_link.cpp"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        driver 
        rc_protocol
        esp_psram
        nvs_flash
        esp_wifi
        esp_netif
        lwip
    PRIV_REQUIRES 
        spi_flash
)