idf_component_register(
    SRCS 
        "main.c"
        "remote_ota.c"
        "joystick_calib.c"
    INCLUDE_DIRS 
        "."
    REQUIRES 
        esp_wifi
        esp_event
        nvs_flash
        esp_netif
        esp_adc
        lwip
        driver
        esp_psram
        rc_protocol
        esp_http_server 
        app_update
    PRIV_REQUIRES 
        spi_flash
)